--- a/MyApp/www/css/index.css
+++ b/MyApp/www/css/index.css
@@ -108,21 +108,11 @@ input[type=number] {
     color:#e2d4e6 !important;
 }
 
-/*  ---->index.html<----  */
-.logo{
-    width: 100%;
-    height: auto;
-    padding: 15% 0 !important;
-}
-.logo img{
-    margin: 5% auto;
-    width: 50%;
-    display: block;
-}
-.caption{
-    font-size: 100%;
-    font-weight: bold;
-}
+
+
+
+
+
 /*  ---->Loading<----  */
 .lds-ellipsis {
     display: inline-block;
@@ -179,6 +169,35 @@ input[type=number] {
         transform: translate(19px, 0);
     }
 }
+
+
+
+
+
+
+
+
+/*  ---->index.html<----  */
+.logo{
+    width: 100%;
+    height: auto;
+    padding: 15% 0 !important;
+}
+.logo img{
+    margin: 5% auto;
+    width: 50%;
+    display: block;
+}
+.caption{
+    font-size: 100%;
+    font-weight: bold;
+    direction: rtl;
+}
+
+
+
+
+
 /*  ---->index_1.html<----  */
 .top_elements{
     width: 100%;
@@ -283,6 +302,14 @@ input[type=number] {
     font-weight:bold;
     padding:2% 10% !important;
 }
+
+
+
+
+
+
+
+
 /*  ---->index_2.html<----  */
 /* header  */
 section .head-top{
@@ -396,8 +423,9 @@ section .style_top {
 }
 .main_btn ul li {
     display: block;
-    width: 120px;
-    height: 120px;
+    width: 30%;
+    padding-top: 30%; 
+    position: relative;
     float: right;
     background: #461857;
     border-radius: 50%;
@@ -413,7 +441,6 @@ section .style_top {
     color: #fff;
     font-size: 12px;
 }
-
 /* style_buttom  */
 .style_buttom {
     height: auto;
