--- a/MyApp/www/css/index.css
+++ b/MyApp/www/css/index.css
@@ -108,12 +108,21 @@ input[type=number] {
     color:#e2d4e6 !important;
 }
 
-
-
-
-
-
-/*  ---->Loading<----  */
+/*  ---->index.html<----  */
+.logo_first_page{
+    width: 100%;
+    height: auto;
+    padding: 15% 0 !important;
+}
+.logo_first_page img{
+    margin: 5% auto;
+    width: 50%;
+    display: block;
+}
+.caption_first_page{
+    font-size: 100%;
+    font-weight: bold;
+}
 .lds-ellipsis {
     display: inline-block;
     position: relative;
@@ -169,35 +178,6 @@ input[type=number] {
         transform: translate(19px, 0);
     }
 }
-
-
-
-
-
-
-
-
-/*  ---->index.html<----  */
-.logo{
-    width: 100%;
-    height: auto;
-    padding: 15% 0 !important;
-}
-.logo img{
-    margin: 5% auto;
-    width: 50%;
-    display: block;
-}
-.caption{
-    font-size: 100%;
-    font-weight: bold;
-    direction: rtl;
-}
-
-
-
-
-
 /*  ---->index_1.html<----  */
 .top_elements{
     width: 100%;
@@ -229,13 +209,17 @@ input[type=number] {
 .top_img img{
     width: 100%;
 }
-.logo{
+.logo_page_2{
     width: 100%;
-    padding: 15% 0;
+    padding: 10% 0;
  }
-.caption{
+.logo_page_2 img{
+    width: 50%;
+}
+.caption_page_2{
     text-align: center;
     font-size: 100%;
+    padding: 5% 0;
 }
 .bottom-img{
     width: 100%;
@@ -264,17 +248,17 @@ input[type=number] {
 .circle_1{
     width: 100px;
     height: 100px;
-    margin-left: 14%;
+    margin-left: 15%;
 }
 .circle_2{
     width: 85px;
     height: 85px;
-    margin: 10% 0 0 5%;
+    margin: 10% 0 0 3%;
 }
 .circle_3{
     width: 75px;
     height: 75px;
-    margin: 10% 0 0 12%;
+    margin: 10% 0 0 5%;
 }
 .info{
     background: #5a1a73 !important;
@@ -302,38 +286,30 @@ input[type=number] {
     font-weight:bold;
     padding:2% 10% !important;
 }
-
-
-
-
-
-
-
-
 /*  ---->index_2.html<----  */
-/* header  */
-section .head-top{
-    background-color: #45175c !important;
+.head-top{
+    width: 100%;
+    height: auto;
+    background-color: #45175c!important;
 }
-/* slider  */
-section .side-panel {
+.side-panel {
     float:right;
     height: auto;
     padding: 0 1% !important;
 }
-section .side-panel span{
+.side-panel span{
     float:right;
     height: 30px;
     padding:5%;
     font-size:200%;
     cursor:pointer;
 }
-section .other-panel{
+.other-panel{
     width: 25%;
     height: auto;
     float: left;
 }
-section .other-panel span{
+.other-panel span{
     padding: 5% 7%;
     font-size: 170%;
 }
@@ -404,7 +380,7 @@ section .other-panel span{
 }
 
 /* style_top  */
-section .style_top {
+.style_top {
     height: auto;
 }
 .style_top img {
@@ -423,9 +399,8 @@ section .style_top {
 }
 .main_btn ul li {
     display: block;
-    width: 30%;
-    padding-top: 30%; 
-    position: relative;
+    width: 120px;
+    height: 120px;
     float: right;
     background: #461857;
     border-radius: 50%;
@@ -441,6 +416,7 @@ section .style_top {
     color: #fff;
     font-size: 12px;
 }
+
 /* style_buttom  */
 .style_buttom {
     height: auto;
